--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
   <package id="LumiaImagingSDK" version="2.0.208" targetFramework="wpa81" />
   <package id="MMaitre.VideoEffects" version="2.3.2" targetFramework="wpa81" />
+  <package id="MvvmLight" version="5.3.0.0" targetFramework="wpa81" />
+  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="wpa81" />
   <package id="Win2D.win81" version="1.4.0" targetFramework="wpa81" />
   <package id="ZXing.Net" version="0.14.0.1" targetFramework="wpa81" />
